# AlertaDengueCaptura

./: .pre-commit-config.yaml  Makefile  environment-3.7.yml  environment-downloader.yml  example_env_file  requirements-dev.txt  setup.cfg  tweets.py
.github/scripts/: update_credentials_environ.sh
.github/workflows/: integrate.yaml
crawlclima/: capturachuva.py  pegatemperatura.py  pegatweets.py  tasks.py
crawlclima/redemet/tests/: test_rmet.py
crawlclima/tests/: test_tasks.py
docker/: Dockerfile-celery  cron_tasks  docker-compose.yml  donwloader-env.yml  start_script_celery.sh
docker/crawlclima/: Makefile  setup.py
docker/satellite/: Dockerfile-downloader  Makefile  cron_tasks  downloader-compose.yml  start_cron_celery.sh
downloader_app/: config.py  run_celery_downloader.py  settings.ini  settings.py  tasks.py  test_ee_start.py  tiff_downloader.py  utils.py
downloader_app/ci/: config.py  create_credentials.py
downloader_app/shape_region/MA_Mun97_region/: MA_Mun97_region.dbf  MA_Mun97_region.shp  MA_Mun97_region.shx
downloader_app/shape_region/PR_Mun97_region/: PR_Mun97_region.dbf  PR_Mun97_region.shp  PR_Mun97_region.shx
downloader_app/shape_region/RS_Mun97_region/: RS_Mun97_region.dbf  RS_Mun97_region.shp  RS_Mun97_region.shx
downloader_app/tests/: test_tiff_downloader.py
