[metadata]
license-file = LICENSE

[flake8]
max-line-length = 79
ignore = D202,D203,W503,E203
exclude = 
    settings.py
    local_settings.py
    */migrations/*
    downloader_app/*

[isort]
known_third_party = metadsl,pandas,pytest,setuptools
ensure_newline_before_comments=true
line_length = 79
multi_line_output = 3
include_trailing_comma = true